tests/fsharp/typeProviders/negTests/InvalidInvokerExpression.bsl

InvalidInvokerExpression.fsx(4,9,4,79): typecheck error FS3056: Type provider 'Provider.GoodProviderForNegativeTypeTests1' returned null from GetInvokerExpression.
