tests/fsharp/typeProviders/negTests/InvalidInvokerExpression.fsx
#r "provider.dll"

let i = FSharp.GoodProviderForNegativeTypeTests1.TheType.InvalidInvokerExpression
let j = FSharp.GoodProviderForNegativeTypeTests1.TheType.NullInvokerExpression